Fixed default font, was too large.

--- a/src/TestCaseExplorer/css/app.css
+++ b/src/TestCaseExplorer/css/app.css
@@ -1,5 +1,4 @@
 ﻿#testcase-extension {
-    font-size: 14px;
     position: fixed;
     width: 100%;
     height: 100%;
